force-app/main/default/objects/Contact/fields/LastAddedExpenseValue__c.field-meta.xml
<CustomField>
    <fullName>LastAddedExpenseValue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LastAddedExpenseValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>