force-app/main/default/objects/Contact/fields/LastGainedProfit__c.field-meta.xml
<CustomField>
    <fullName>LastGainedProfit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LastGainedProfit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>