force-app/main/default/objects/Contact/fields/Value_of_Cars__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Cars__c</fullName>
    <label>Value of Cars</label>
    <summarizedField>Car__c.Value__c</summarizedField>
    <summaryForeignKey>Car__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>