force-app/main/default/objects/Contact/fields/Wealth__c.field-meta.xml
<CustomField>
    <fullName>Wealth__c</fullName>
    <formula>Value_of_Cars__c + Profit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>